fix/feat(server): update `GET /team` to return team members & invited users. also added GET /invites. (#136)
